# dems-qa

./: .env.example  .gitignore  README.md  STEPS.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json
.features-gen-rms/features/integration/: rms-integration.feature.spec.js
docs/superpowers/plans/: 2026-06-18-dems-e2e.md  2026-06-23-dems-extended-features.md  2026-06-23-dems-integration-features.md  2026-06-23-rms-integration.md  2026-06-24-action-verification.md  sdd-progress.md
docs/superpowers/specs/: 2026-06-18-dems-e2e-design.md  (+1 more)
features/admin/: retention.feature  user-management.feature
features/audit/: chain-of-custody.feature
features/evidence/: bulk-operations.feature  file-detail.feature  file-lock.feature  search.feature  upload-evidence.feature  view-record.feature
features/integration/: rms-audit.feature  rms-bulk.feature  rms-entry.feature  rms-file-actions.feature  rms-file-detail.feature  rms-filters-detail.feature  rms-integration.feature  rms-notes.feature  rms-restrict.feature  rms-search-filter.feature  rms-sharing.feature  rms-upload.feature
features/sharing/: external-share.feature
fixtures/test-files/: README.md
scripts/: purge-test-data.ts
setup/: auth.setup.ts  rms-auth.setup.ts
steps/api/: admin_steps.py  audit_steps.py  conftest.py  file_steps.py  record_steps.py  upload_helper.py
steps/rms/: fixtures.ts  rms.steps.ts
steps/ui/: admin.steps.ts  auth.setup.ts  auth.steps.ts  file-detail.steps.ts  file.steps.ts  fixtures.ts  record.steps.ts  share.steps.ts
(+1 files in other folders)
