[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dems-qa"
version = "0.1.0"
dependencies = [
    "pytest>=7.0",
    "pytest-bdd>=6.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["steps/api"]
python_files = ["*_steps.py"]
